appear to have fixed trial bug, fixed a few typos and made email change on homepage

--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -41,16 +41,16 @@
     <h5>Can you write clear, concise summaries, and google random topics faster than anyone you know?</h5>
   </div>
   <div class="row">
-    <p>We need help summarizing interesting audio and video content. You can work from home, at your own pace. We pay $15 per hour and make it easy for you to transcribe and markup content using a custom web tool.</p>
+    <p>We need help summarizing interesting audio and video content. You can work from home, at your own pace. We pay $15 per hour and make it easy for you to transcribe and markup content using our web tool.</p>
   </div>
   <p>Send us a short note that includes:</p>
   <ul>
     <li>Your 3 favorite podcasts or Youtube channels (and why)</li>
     <li>Your 3 favorite follows on Twitter (and why)</li>
     <li>Why you would be great at this</li>
-    <li>Your expected availability per week (in total)</li>
+    <li>Your expected availability per week</li>
   </ul>
   <hr>
-  <p>Email <a href="mailto:matt@timelined.com?subject=Editor Flyer">matt@timelined.com</a> with 'Editor Flyer' in the subject</p>
+  <p>Email <a href="mailto:work@timelined.com?subject=Editor Flyer">work@timelined.com</a> with 'Editor Flyer' in the subject</p>
   </section>
 </template>
