--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -51,6 +51,6 @@
     <li>Your expected availability per week</li>
   </ul>
   <hr>
-  <p>Email <a href="mailto:work@timelined.com?subject=Editor Flyer">work@timelined.com</a> with 'Editor Flyer' in the subject</p>
+  <p>Email <a href="mailto:work@timelined.com?subject=I want to be an Editor">work@timelined.com</a> with 'I want to be an Editor' in the subject</p>
   </section>
 </template>
