resolving fixtures conflicts

--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -52,5 +52,6 @@
   </ul>
   <hr>
   <p>Email <a href="mailto:work@timelined.com?subject=I want to be an Editor">work@timelined.com</a> with 'I want to be an Editor' in the subject</p>
+  <p>Follow  <a href="http://twitter.com/timelinedhq">@timelinedhq</a> for updates.</p>
   </section>
 </template>
